apps/rust-app/v1-basic/kubernetes/k3s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rust-app
  template:
    metadata:
      labels:
        app: rust-app
    spec:
      containers:
        - name: rust-app
          image: masrurimz/thesis-rust-app:v1.0-basic-3001
          ports:
            - containerPort: 3001
          resources:
            limits:
              cpu: "0.512"
              memory: "256Mi"
            requests:
              cpu: "0.125"
              memory: "125Mi"
